tests/baselines/reference/unusedModuleInModule.errors.txt
unusedModuleInModule.ts(2,12): error TS6133: 'B' is declared but its value is never read.


==== unusedModuleInModule.ts (1 errors) ====
    module A {
        module B {}
               ~
!!! error TS6133: 'B' is declared but its value is never read.
    }